--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
           index
         "
       >
-        <div class="w-25 d-flex flex-column text-center">
+        <div class="d-flex flex-column text-center">
           <img src="CSS/images/horizons.png" alt="horizons" id="horizons" />
           <img
             src="CSS/images/horizons_bright.png"
